[package]
name = "initia-move-json"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []

[dependencies]
initia-move-types = { workspace = true }
initia-move-storage = { workspace = true }

## Move Dependencies
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-binary-format = { workspace = true }
move-vm-runtime = { workspace = true }

bigdecimal = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
smallbitvec = { workspace = true }

[dev-dependencies]
triomphe = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
