[package]
name = "initia-natives"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/initiavm/tree/main/crates/natives"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initia-types = { workspace = true }
initia-gas = { workspace = true }

anyhow = { workspace = true }
bcs = { workspace = true }
better_any = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
smallvec = { workspace = true }
rand_core = { workspace = true }
libsecp256k1 = { workspace = true }
sha3 = { workspace = true }
ed25519-consensus = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-stdlib = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = []
testing = ["initia-gas/testing", "move-vm-runtime/testing", "move-stdlib/testing"]
