[package]
name = "initia-move-natives"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initia-move-types = { workspace = true }
initia-move-gas = { workspace = true }
initia-move-json = { workspace = true }
initia-move-storage = { workspace = true }

anyhow = { workspace = true }
bcs = { workspace = true }
bech32 = { workspace = true }
better_any = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
smallvec = { workspace = true }
rand_core = { workspace = true }
libsecp256k1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ripemd = { workspace = true }
ed25519-consensus = { workspace = true }
hex = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-stdlib = { workspace = true }

bigdecimal = { workspace = true }
base64 = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = []
testing = [
    "initia-move-gas/testing",
    "move-vm-runtime/testing",
    "move-stdlib/testing",
]
