[package]
name = "initia-move-resource-viewer"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
initia-move-types = { workspace = true }
initia-move-storage = { workspace = true }

move-binary-format = { workspace = true }
move-bytecode-utils = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }

anyhow = { workspace = true }
