[package]
name = "initia-storage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/initiavm/tree/main/crates/storage"
rust-version = { workspace = true }

[dependencies]
initia-types = { workspace = true }
initia-natives = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
