[package]
name = "initia-move-storage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/movevm/tree/main/crates/storage"
rust-version = { workspace = true }

[dependencies]
initia-move-types = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-bytecode-utils = { workspace = true }

ambassador = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
clru = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }
claims = { workspace = true }
