[package]
name = "initia-move-storage"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
initia-move-types = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-bytecode-utils = { workspace = true }

ambassador = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
clru = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }
claims = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
