[package]
name = "initia-move-types"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/movevm/tree/main/crates/types"
rust-version = { workspace = true }

[dependencies]
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
legacy-move-compiler = { workspace = true }
move-compiler-v2 = { workspace = true }
move-cli = { workspace = true }
move-docgen = { workspace = true }
move-package = { workspace = true }
move-model = { workspace = true }
move-coverage = { workspace = true }

anyhow = { workspace = true }
bytes = {workspace = true}
bcs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }
log = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }
base64 = { workspace = true }