[package]
name = "initia-move-types"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
legacy-move-compiler = { workspace = true }
move-compiler-v2 = { workspace = true }
move-cli = { workspace = true }
move-docgen = { workspace = true }
move-package = { workspace = true }
move-model = { workspace = true }
move-coverage = { workspace = true }

anyhow = { workspace = true }
bytes = {workspace = true}
bcs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }
log = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }
base64 = { workspace = true }