[package]
name = "initia-move-vm"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
description = "VM bindings to run move contracts on go"
homepage = "https://www.initia.co"
repository = "https://github.com/initia-labs/movevm/tree/main/crates/vm"
license = "BUSL-1.1"
exclude = [".gitignore"]

[features]
default = []
backtraces = []

[dependencies]
initia-move-types = { workspace = true }
initia-move-storage = { workspace = true }
initia-move-natives = { workspace = true }
initia-move-gas = { workspace = true }

## Move Dependencies
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-bytecode-verifier = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bcs = { workspace = true }
tempfile = { workspace = true }
bigdecimal = { workspace = true }

[dev-dependencies]
triomphe = { workspace = true }
