[package]
name = "initia-move-vm"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []

[dependencies]
initia-move-types = { workspace = true }
initia-move-storage = { workspace = true }
initia-move-natives = { workspace = true }
initia-move-gas = { workspace = true }
initia-move-json = { workspace = true }

## Move Dependencies
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-model = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bcs = { workspace = true }
tempfile = { workspace = true }
bigdecimal = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
triomphe = { workspace = true }

