[package]
name = "compiler-cli"
version = "0.1.0"
publish = false
description = "Initia Move Compiler CLI"
homepage = "https://initia.xyz/"
repository = "https://github.com/initia-labs/movevm"
exclude = [".gitignore"]

edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "compiler-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
initia-move-compiler.workspace = true
move-cli.workspace = true
