[package]
name = "initia-move-cli"
version.workspace = true
publish = true
description = "Initia Move Compiler CLI"
homepage = "https://initia.xyz/"
repository = "https://github.com/initia-labs/movevm"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "initia-move-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
initia-move-compiler.workspace = true
movevm.workspace = true
serde.workspace = true
serde_json.workspace = true
