[package]
name = "initia-move-cli"
description = "Initia Move Compiler CLI"
include = ["src/**/*", "Cargo.toml", "README.md"]
publish = true

# workspace settings
version.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "initia-move-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

initia-move-compiler = { workspace = true }
initia-move-api = { workspace = true }
